ros2_ws/log/build_2023-03-18_05-00-59/robdep/stderr.log
  File "/home/ubuntu/ros2_ws/install/robdep/lib/python3.8/site-packages/robdep/get_images.py", line 21
    cv2.imwrite('/home/ubuntu/image_calib/images' + str(num) + '.png', img))
                                                                           ^
SyntaxError: unmatched ')'

